--- a/index.html
+++ b/index.html
@@ -9,9 +9,8 @@
 
 <body>
    
-    <h1 class="part1"> Site responsivo 
-    </h1>
-    <h1 class="part2">Aula de Programação Quarta-feira</h1>
+    <h1 class="part1"> Site responsivo </h1>
+    <h1 class="part2"> Aula de Programação Quarta-feira</h1>
 
 </body>
 </html>
